--- a/src/styles/theme-chalk/row.scss
+++ b/src/styles/theme-chalk/row.scss
@@ -1,6 +1,33 @@
-@import "../commom/var.scss";
+@import "../common/var.scss";
 @import "../mixins/mixins.scss";
+@import '../mixins/utils.scss';
 
 @include b(row) {
+  position: relative;
+  box-sizing: border-box;
+  @include utils-clearfix;
 
+  @include m(flex) {
+    display: flex;
+
+    @include when(justify-center) {
+      justify-content: center;
+    }
+    @include when(justify-end) {
+      justify-content: flex-end;
+    }
+    @include when(justify-space-between) {
+      justify-content: space-between;
+    }
+    @include when(justify-space-around) {
+      justify-content: space-around;
+    }
+
+    @include when(align-middle) {
+      align-items: center;
+    }
+    @include when(align-bottom) {
+      align-items: flex-end;
+    }
+  }
 }
