--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -8,13 +8,14 @@ $--fade-linear-transition: opacity 200ms linear !default;
 $--md-fade-transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1), opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
 $--border-transition-base: border-color .2s cubic-bezier(.645,.045,.355,1) !default;
 $--color-transition-base: color .2s cubic-bezier(.645,.045,.355,1) !default;
+$--button-transition: .15s !default;
 
 /* Colors
 -------------------------- */
 $--color-white: #fff !default;
 $--color-black: #000 !default;
 
-$--color-primary: #409EFF !default;
+$--color-primary: #DA3E9B !default; /* #409EFF  */
 $--color-primary-light-1: mix($--color-white, $--color-primary, 10%) !default; /* 53a8ff */
 $--color-primary-light-2: mix($--color-white, $--color-primary, 20%) !default; /* 66b1ff */
 $--color-primary-light-3: mix($--color-white, $--color-primary, 30%) !default; /* 79bbff */
@@ -25,10 +26,13 @@ $--color-primary-light-7: mix($--color-white, $--color-primary, 70%) !default; /
 $--color-primary-light-8: mix($--color-white, $--color-primary, 80%) !default; /* d9ecff */
 $--color-primary-light-9: mix($--color-white, $--color-primary, 90%) !default; /* ecf5ff */
 
-$--color-success: #67c23a !default;
-$--color-warning: #e6a23c !default;
-$--color-danger: #f56c6c !default;
+$--color-default: $--color-white !default;
+$--color-secondary: #2196f3 !default;
+$--color-success: #4caf50 !default; /* #67c23a */
+$--color-warning: #ff9900 !default; /* #e6a23c */
+$--color-danger: #f44336 !default; /* #f56c6c */
 $--color-info: #909399 !default;
+$--color-fancy: #DA3E9B !default; /* 樱花红 */
 
 $--color-success-light: mix($--color-white, $--color-success, 80%) !default;
 $--color-warning-light: mix($--color-white, $--color-warning, 80%) !default;
@@ -44,6 +48,16 @@ $--color-text-primary: #303133 !default;
 $--color-text-regular: #606266 !default;
 $--color-text-secondary: #909399 !default;
 $--color-text-placeholder: #c0c4cc !default;
+
+$--color-list: (
+  'primary': $--color-primary,
+  'secondary': $--color-secondary,
+  'success': $--color-success,
+  'warning': $--color-warning,
+  'info': $--color-info,
+  'danger': $--color-danger,
+  'fancy': $--color-fancy
+);
 
 /* Link
 -------------------------- */
@@ -64,7 +78,7 @@ $--border-color-lighter: #ebeef5 !default;
 $--border-color-extra-light: #f2f6fc !default;
 $--border-color-hover: $--color-text-placeholder !default;
 $--border-base: $--border-width-base $--border-style-base $--border-color-base !default;
-$--border-radius-base: 4px !default;
+$--border-radius-base: 3px !default; /* 4px */
 $--border-radius-small: 2px !default;
 $--border-radius-circle: 100% !default;
 
@@ -85,7 +99,7 @@ $--font-size-base: 14px !default;
 $--font-size-small: 13px !default;
 $--font-size-large: 18px !default;
 $--font-color-disabled-base: #bbb !default;
-$--font-weight-primary: 500 !default;
+$--font-weight-primary: 400 !default;
 $--font-line-height-primary: 24px !default;
 
 /* Size
@@ -139,12 +153,12 @@ $--checkbox-input-border-color-hover: $--color-primary !default;
 
 $--checkbox-bordered-height: 40px !default;
 $--checkbox-bordered-padding: 9px 20px 9px 10px !default;
-$--checkbox-bordered-medium-padding: 7px 20px 7px 10px !default;
+$--checkbox-bordered-large-padding: 7px 20px 7px 10px !default;
 $--checkbox-bordered-small-padding: 5px 15px 5px 10px !default;
 $--checkbox-bordered-mini-padding: 3px 15px 3px 10px !default;
-$--checkbox-bordered-medium-input-height: 14px !default;
-$--checkbox-bordered-medium-input-width: 14px !default;
-$--checkbox-bordered-medium-height: 36px !default;
+$--checkbox-bordered-large-input-height: 14px !default;
+$--checkbox-bordered-large-input-width: 14px !default;
+$--checkbox-bordered-large-height: 36px !default;
 $--checkbox-bordered-small-input-height: 12px !default;
 $--checkbox-bordered-small-input-width: 12px !default;
 $--checkbox-bordered-small-height: 32px !default;
@@ -157,7 +171,11 @@ $--checkbox-button-checked-fill: $--color-primary !default;
 $--checkbox-button-checked-color: $--color-white !default;
 $--checkbox-button-checked-border-color: $--color-primary !default;
 
+/* Row
+-------------------------- */
 
+/* Col
+-------------------------- */
 
 /* Radio
 -------------------------- */
@@ -189,12 +207,12 @@ $--radio-input-border-color-hover: $--color-primary !default;
 
 $--radio-bordered-height: 40px !default;
 $--radio-bordered-padding: 12px 20px 0 10px !default;
-$--radio-bordered-medium-padding: 10px 20px 0 10px !default;
+$--radio-bordered-large-padding: 10px 20px 0 10px !default;
 $--radio-bordered-small-padding: 8px 15px 0 10px !default;
 $--radio-bordered-mini-padding: 6px 15px 0 10px !default;
-$--radio-bordered-medium-input-height: 14px !default;
-$--radio-bordered-medium-input-width: 14px !default;
-$--radio-bordered-medium-height: 36px !default;
+$--radio-bordered-large-input-height: 14px !default;
+$--radio-bordered-large-input-width: 14px !default;
+$--radio-bordered-large-height: 36px !default;
 $--radio-bordered-small-input-height: 12px !default;
 $--radio-bordered-small-input-width: 12px !default;
 $--radio-bordered-small-height: 32px !default;
@@ -339,8 +357,8 @@ $--input-disabled-border: $--disabled-border-base !default;
 $--input-disabled-color: $--disabled-color-base !default;
 $--input-disabled-placeholder-color: $--color-text-placeholder !default;
 
-$--input-medium-font-size: 14px !default;
-$--input-medium-height: 36px !default;
+$--input-large-font-size: 14px !default;
+$--input-large-height: 36px !default;
 
 $--input-small-font-size: 13px !default;
 $--input-small-height: 32px !default;
@@ -396,18 +414,19 @@ $--tab-vertical-header-count-fill: $--color-text-secondary !default;
 $--button-font-size: 14px !default;
 $--button-font-weight: $--font-weight-primary !default;
 $--button-border-radius: $--border-radius-base !default;
-$--button-padding-vertical: 12px !default;
-$--button-padding-horizontal: 20px !default;
+$--button-padding-vertical: 8px !default;
+$--button-padding-horizontal: 16px !default;
+$--button-group-border: hsla(0,0%,100%,.45);
 
-$--button-medium-font-size: 14px !default;
-$--button-medium-border-radius: $--border-radius-base !default;
-$--button-medium-padding-vertical: 10px !default;
-$--button-medium-padding-horizontal: 20px !default;
+$--button-large-font-size: 14px !default;
+$--button-large-border-radius: $--border-radius-base !default;
+$--button-large-padding-vertical: 10px !default;
+$--button-large-padding-horizontal: 20px !default;
 
 $--button-small-font-size: 12px !default;
 $--button-small-border-radius: #{$--border-radius-base - 1} !default;
-$--button-small-padding-vertical: 9px !default;
-$--button-small-padding-horizontal: 15px !default;
+$--button-small-padding-vertical: 6px !default;
+$--button-small-padding-horizontal: 12px !default;
 
 $--button-mini-font-size: 12px !default;
 $--button-mini-border-radius: #{$--border-radius-base - 1} !default;
@@ -423,27 +442,23 @@ $--button-disabled-fill: $--color-white !default;
 $--button-disabled-border: $--border-color-lighter !default;
 
 $--button-primary-border: $--color-primary !default;
-$--button-primary-color: $--color-white !default;
+$--button-primary-color: $--color-primary !default;
 $--button-primary-fill: $--color-primary !default;
-
-$--button-success-border: $--color-success !default;
-$--button-success-color: $--color-white !default;
-$--button-success-fill: $--color-success !default;
-
-$--button-warning-border: $--color-warning !default;
-$--button-warning-color: $--color-white !default;
-$--button-warning-fill: $--color-warning !default;
-
-$--button-danger-border: $--color-danger !default;
-$--button-danger-color: $--color-white !default;
-$--button-danger-fill: $--color-danger !default;
-
-$--button-info-border: $--color-info !default;
-$--button-info-color: $--color-white !default;
-$--button-info-fill: $--color-info !default;
 
 $--button-hover-tint-percent: 20% !default;
 $--button-active-shade-percent: 10% !default;
+
+$--button-type-list: (
+  text: $--color-fancy,
+  default: $--color-fancy,
+  primary: $--color-primary,
+  secondary: $--color-secondary,
+  success: $--color-success,
+  info: $--color-info,
+  warning: $--color-warning,
+  danger: $--color-danger,
+  fancy: $--color-fancy
+);
 
 
 /* cascader
@@ -696,6 +711,10 @@ $--breakpoints: (
   'lg' : (min-width: $--lg),
   'xl' : (min-width: $--xl)
 );
+
+$--breakpoints-arr: xs, sm, md, lg, xl;
+
+$--breakpoints-size-list: ('xs', 'sm', 'md', 'lg', 'xl');
 
 $--breakpoints-spec: (
   'xs-only' : (max-width: $--sm - 1),
