--- a/src/styles/theme-chalk/icon.scss
+++ b/src/styles/theme-chalk/icon.scss
@@ -11,7 +11,7 @@
 [class^="gg-icon-"], [class*=" gg-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'element-icons' !important;
-  speak: none;
+  // speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
