--- a/src/styles/theme-chalk/index.scss
+++ b/src/styles/theme-chalk/index.scss
@@ -4,3 +4,10 @@
 @import "button-group.scss";
 @import "col.scss";
 @import "row.scss";
+@import "tooltip.scss";
+@import "input.scss";
+@import "form.scss";
+@import "form-item.scss";
+@import "tree.scss";
+@import "checkbox.scss";
+@import "checkbox-group.scss";
