--- a/src/styles/common/normalize.scss
+++ b/src/styles/common/normalize.scss
@@ -11,6 +11,7 @@
  html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  -webkit-font-smoothing: antialiased; /* add by qian */
 }
 
 /* Sections
@@ -22,6 +23,7 @@
 
 body {
   margin: 0;
+  font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,Arial,sans-serif; /* add by qian */
 }
 
 /**
