--- a/src/styles/common/transition.scss
+++ b/src/styles/common/transition.scss
@@ -10,70 +10,70 @@
   opacity: 0;
 }
 
-.el-fade-in-linear-enter-active,
-.el-fade-in-linear-leave-active {
+.gg-fade-in-linear-enter-active,
+.gg-fade-in-linear-leave-active {
   transition: $--fade-linear-transition;
 }
-.el-fade-in-linear-enter,
-.el-fade-in-linear-leave,
-.el-fade-in-linear-leave-active {
+.gg-fade-in-linear-enter,
+.gg-fade-in-linear-leave,
+.gg-fade-in-linear-leave-active {
   opacity: 0;
 }
 
-.el-fade-in-enter-active,
-.el-fade-in-leave-active {
+.gg-fade-in-enter-active,
+.gg-fade-in-leave-active {
   transition: all .3s cubic-bezier(.55,0,.1,1);
 }
-.el-fade-in-enter,
-.el-fade-in-leave-active {
+.gg-fade-in-enter,
+.gg-fade-in-leave-active {
   opacity: 0;
 }
 
-.el-zoom-in-center-enter-active,
-.el-zoom-in-center-leave-active {
+.gg-zoom-in-center-enter-active,
+.gg-zoom-in-center-leave-active {
   transition: all .3s cubic-bezier(.55,0,.1,1);
 }
-.el-zoom-in-center-enter,
-.el-zoom-in-center-leave-active {
+.gg-zoom-in-center-enter,
+.gg-zoom-in-center-leave-active {
   opacity: 0;
   transform: scaleX(0);
 }
 
-.el-zoom-in-top-enter-active,
-.el-zoom-in-top-leave-active {
+.gg-zoom-in-top-enter-active,
+.gg-zoom-in-top-leave-active {
   opacity: 1;
   transform: scaleY(1);
   transition: $--md-fade-transition;
   transform-origin: center top;
 }
-.el-zoom-in-top-enter,
-.el-zoom-in-top-leave-active {
+.gg-zoom-in-top-enter,
+.gg-zoom-in-top-leave-active {
   opacity: 0;
   transform: scaleY(0);
 }
 
-.el-zoom-in-bottom-enter-active,
-.el-zoom-in-bottom-leave-active {
+.gg-zoom-in-bottom-enter-active,
+.gg-zoom-in-bottom-leave-active {
   opacity: 1;
   transform: scaleY(1);
   transition: $--md-fade-transition;
   transform-origin: center bottom;
 }
-.el-zoom-in-bottom-enter,
-.el-zoom-in-bottom-leave-active {
+.gg-zoom-in-bottom-enter,
+.gg-zoom-in-bottom-leave-active {
   opacity: 0;
   transform: scaleY(0);
 }
 
-.el-zoom-in-left-enter-active,
-.el-zoom-in-left-leave-active {
+.gg-zoom-in-left-enter-active,
+.gg-zoom-in-left-leave-active {
   opacity: 1;
   transform: scale(1, 1);
   transition: $--md-fade-transition;
   transform-origin: top left;
 }
-.el-zoom-in-left-enter,
-.el-zoom-in-left-leave-active {
+.gg-zoom-in-left-enter,
+.gg-zoom-in-left-leave-active {
   opacity: 0;
   transform: scale(.45, .45);
 }
@@ -85,15 +85,15 @@
   transition: 0.3s width ease-in-out, 0.3s padding-left ease-in-out, 0.3s padding-right ease-in-out;
 }
 
-.el-list-enter-active,
-.el-list-leave-active {
+.gg-list-enter-active,
+.gg-list-leave-active {
   transition: all 1s;
 }
-.el-list-enter, .el-list-leave-active {
+.gg-list-enter, .gg-list-leave-active {
   opacity: 0;
   transform: translateY(-30px);
 }
 
-.el-opacity-transition {
+.gg-opacity-transition {
   transition: opacity .3s cubic-bezier(.55,0,.1,1);
 }
