--- a/src/styles/theme-chalk/index.scss
+++ b/src/styles/theme-chalk/index.scss
@@ -11,3 +11,5 @@
 @import "tree.scss";
 @import "checkbox.scss";
 @import "checkbox-group.scss";
+@import "radio.scss";
+@import "radio-group.scss";
